Fix accordion headers logic, link document config to correct DB path, remove avatar border

--- a/Frontend/public/imposta_nuova_password.html
+++ b/Frontend/public/imposta_nuova_password.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html class="titanium-forced-dark dark" lang="it">
+<html lang="it" class="titanium-forced-dark">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="color-scheme" content="dark only">
-    <meta name="theme-color" content="#0a0f1e">
-    <title>Nuova Chiave d'Accesso - Protocollo Titanium</title>
+    <title>Codici & Password - Nuova Password</title>
 
-    <!-- Fonts & Icons -->
+    <link rel="manifest" href="manifest.json?v=5.7" />
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
+
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&amp;display=swap"
@@ -17,135 +18,77 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
         rel="stylesheet" />
 
-    <!-- Design System -->
-    <link rel="stylesheet" href="assets/css/titanium.css">
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <!-- TITANIUM AUTH SYSTEM V6.0 (Pure CSS) -->
+    <link rel="stylesheet" href="assets/css/auth_accesso.css?v=6.0">
 </head>
 
-<body class="titanium-bg antialiased">
+<body>
+
     <div class="titanium-box">
 
-        <!-- EF-[#3] FARO ANIMATO -->
+        <!-- Scenografia -->
         <div class="glass-glow"></div>
+        <div class="auth-header"></div>
+        <div class="auth-footer"></div>
 
-        <!-- HEADER PLACEHOLDER -->
-        <div id="header-placeholder"></div>
+        <!-- Card Nuova Password -->
+        <div class="titanium-vault border-glow">
 
-        <main class="titanium-main !items-center !justify-center">
-
-            <!-- New Password Card -->
-            <div class="titanium-vault border-glow group">
-
-                <div class="px-8 pt-10 pb-10 relative z-10">
-                    <!-- Icon Section -->
-                    <div class="flex justify-center mb-8">
-                        <div
-                            class="h-20 w-20 rounded-2xl bg-gradient-to-tr from-blue-600 to-blue-400 flex items-center justify-center shadow-2xl shadow-blue-500/20 ring-1 ring-white/20 relative border-glow group-hover:scale-110 transition-transform duration-500">
-                            <span
-                                class="material-symbols-outlined text-white text-[36px] drop-shadow-lg">security</span>
-                        </div>
-                    </div>
-
-                    <h1 class="text-3xl font-extrabold text-white text-center mb-1 select-none font-display"
-                        data-t="set_password_page_title">Nuova
-                        Password</h1>
-                    <p class="text-xs text-white/40 text-center mb-6 uppercase tracking-widest select-none font-bold"
-                        data-t="login_subtitle">
-                        Protocollo Titanium</p>
-
-                    <!-- REGOLA 5 - AIUTO BASE INFORMATIVA -->
-                    <div class="mb-8 p-4 bg-white/5 rounded-2xl border border-white/5 no-select">
-                        <div class="flex items-center gap-2 mb-2">
-                            <span class="material-symbols-outlined text-blue-400 text-sm">security</span>
-                            <h4 class="text-[10px] font-bold text-blue-400 uppercase tracking-widest"
-                                data-t="password_requirements">Protocollo 12-3-3
-                            </h4>
-                        </div>
-                        <ul class="text-[11px] text-white/40 space-y-1 list-none italic leading-relaxed">
-                            <li class="flex items-center gap-2"><span
-                                    class="w-1 h-1 bg-blue-500 rounded-full"></span><span data-t="req_min_chars">Minimo
-                                    12 caratteri totali</span></li>
-                            <li class="flex items-center gap-2"><span
-                                    class="w-1 h-1 bg-blue-500 rounded-full"></span><span data-t="req_upper">Almeno 3
-                                    Lettere Maiuscole</span></li>
-                            <li class="flex items-center gap-2"><span
-                                    class="w-1 h-1 bg-blue-500 rounded-full"></span><span data-t="req_symbols">Almeno 3
-                                    Simboli Speciali</span></li>
-                        </ul>
-                    </div>
-
-                    <form id="update-password-form" class="space-y-6">
-                        <!-- New Password -->
-                        <div class="space-y-2">
-                            <label
-                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none"
-                                data-t="new_password">Nuova
-                                Password</label>
-                            <div class="relative group/input">
-                                <input id="new-password" type="text" placeholder="************" required
-                                    class="titanium-shield w-full h-14 px-5 pr-14 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base">
-                                <button type="button"
-                                    class="toggle-password absolute right-4 top-1/2 -translate-y-1/2 text-white/20 hover:text-white transition-colors">
-                                    <span class="material-symbols-outlined text-[20px] select-none">visibility</span>
-                                </button>
-                            </div>
-                        </div>
-
-                        <!-- Confirm Password -->
-                        <div class="space-y-2">
-                            <label
-                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none"
-                                data-t="confirm_new_password">Conferma
-                                Password</label>
-                            <div class="relative group/input">
-                                <input id="confirm-password" type="text" placeholder="************" required
-                                    class="titanium-shield w-full h-14 px-5 pr-14 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base">
-                                <button type="button"
-                                    class="toggle-password absolute right-4 top-1/2 -translate-y-1/2 text-white/20 hover:text-white transition-colors">
-                                    <span class="material-symbols-outlined text-[20px] select-none">visibility</span>
-                                </button>
-                            </div>
-                        </div>
-
-                        <!-- Action Button -->
-                        <div class="space-y-3">
-                            <button type="submit"
-                                class="w-full h-14 bg-gradient-to-r from-blue-600 to-blue-500 hover:from-blue-500 hover:to-blue-400 text-white font-extrabold rounded-2xl shadow-xl transition-all active:scale-[0.98] border-glow group/btn overflow-hidden">
-                                <div class="relative z-10 flex items-center justify-center gap-2">
-                                    <span class="tracking-widest uppercase text-xs" data-t="save_new_pass">Salva nuova
-                                        password</span>
-                                    <span class="material-symbols-outlined text-sm">verified_user</span>
-                                </div>
-                            </button>
-
-                            <button type="button" id="cancel-password-update"
-                                class="w-full h-14 bg-white/5 hover:bg-white/10 text-white/60 font-bold rounded-2xl transition-all active:scale-[0.98] border border-white/5">
-                                <span class="tracking-widest uppercase text-xs" data-t="cancel">Annulla</span>
-                            </button>
-                        </div>
-                    </form>
-
-                    <!-- Footer Link -->
-                    <div class="mt-8 text-center border-t border-white/5 pt-6">
-                        <p class="text-[10px] text-white/40 font-bold uppercase tracking-widest select-none">
-                            <span data-t="problems_reset_text">Problemi con il ripristino?</span>
-                            <a href="reset_password.html"
-                                class="text-blue-400 hover:text-white transition-colors ml-1 font-extrabold"
-                                data-t="resend_link_text">Reinvia
-                                email con link</a>
-                        </p>
-                    </div>
-                </div>
+            <!-- Icona -->
+            <div class="security-icon-box">
+                <span class="material-symbols-outlined">vpn_key</span>
             </div>
-        </main>
 
-        <!-- FOOTER PLACEHOLDER -->
-        <div id="footer-placeholder"></div>
+            <!-- Titoli -->
+            <h1 class="auth-title" data-t="set_password_page_title">Nuova Password</h1>
+            <p class="auth-subtitle" data-t="password_req_title">Scegli una password sicura</p>
+
+            <!-- Form -->
+            <form id="new-password-form">
+
+                <!-- Nuova Password -->
+                <div class="auth-form-group">
+                    <label class="auth-label" data-t="new_password">Nuova Password</label>
+                    <input id="new-password" name="new-password" type="password" autocomplete="new-password" required
+                        class="auth-input" data-t="password_placeholder_reg" placeholder="********">
+                    <button type="button" class="toggle-password">
+                        <span class="material-symbols-outlined">visibility</span>
+                    </button>
+                </div>
+
+                <!-- Conferma Password -->
+                <div class="auth-form-group">
+                    <label class="auth-label" data-t="confirm_new_password">Conferma Password</label>
+                    <input id="confirm-password" name="confirm-password" type="password" autocomplete="new-password"
+                        required class="auth-input" placeholder="********">
+                </div>
+
+                <!-- Submit -->
+                <button type="submit" class="auth-btn" data-t="save_new_pass">
+                    <span class="material-symbols-outlined" style="font-size: 20px;">save</span>
+                    Salva Password
+                </button>
+
+            </form>
+
+            <div style="text-align: center; margin-top: 1.5rem;">
+                <a href="index.html" id="cancel-password-update" class="link-register"
+                    style="font-size: 0.75rem; color: #a78bfa;" data-t="cancel">
+                    Annulla
+                </a>
+            </div>
+
+            <!-- Footer Legale -->
+            <div class="legal-footer">
+                © 2026 BM Service S.R.L. - <span data-t="version">Titanium V6.0</span>
+            </div>
+
+        </div>
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/main.js"></script>
     <script type="module" src="assets/js/imposta_nuova_password.js"></script>
+
 </body>
 
 </html>
