--- a/Frontend/public/reset_password.html
+++ b/Frontend/public/reset_password.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html class="titanium-forced-dark dark" lang="it">
+<html lang="it" class="titanium-forced-dark">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="color-scheme" content="dark only">
-    <meta name="theme-color" content="#0a0f1e">
-    <title>Recupero Credenziali - Protocollo Titanium</title>
+    <title>Codici & Password - Password Dimenticata</title>
 
-    <!-- Fonts & Icons -->
+    <link rel="manifest" href="manifest.json?v=5.7" />
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
+
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&amp;display=swap"
@@ -17,92 +18,70 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
         rel="stylesheet" />
 
-    <!-- Design System -->
-    <link rel="stylesheet" href="assets/css/titanium.css">
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <!-- TITANIUM AUTH SYSTEM V6.0 (Pure CSS) -->
+    <link rel="stylesheet" href="assets/css/auth_accesso.css?v=6.0">
 </head>
 
-<body class="titanium-bg antialiased">
+<body>
+
     <div class="titanium-box">
 
-        <!-- EF-[#3] FARO ANIMATO -->
+        <!-- Scenografia -->
         <div class="glass-glow"></div>
+        <div class="auth-header"></div>
+        <div class="auth-footer"></div>
 
-        <!-- HEADER PLACEHOLDER -->
-        <div id="header-placeholder"></div>
+        <!-- Card Reset -->
+        <div class="titanium-vault border-glow">
 
-        <main class="titanium-main !items-center !justify-center">
-
-            <!-- Reset Card -->
-            <div class="titanium-vault border-glow group">
-
-                <div class="px-8 pt-10 pb-10 relative z-10">
-                    <!-- Icon Section -->
-                    <div class="flex justify-center mb-8">
-                        <div
-                            class="h-20 w-20 rounded-2xl bg-gradient-to-tr from-blue-600 to-blue-400 flex items-center justify-center shadow-2xl shadow-blue-500/20 ring-1 ring-white/20 relative border-glow group-hover:scale-110 transition-transform duration-500">
-                            <span
-                                class="material-symbols-outlined text-white text-[36px] drop-shadow-lg">security</span>
-                        </div>
-                    </div>
-
-                    <h1 class="text-3xl font-extrabold text-white text-center mb-1 select-none font-display"
-                        data-t="reset_page_title">Recupero
-                    </h1>
-                    <p class="text-xs text-white/40 text-center mb-6 uppercase tracking-widest select-none font-bold"
-                        data-t="login_subtitle">
-                        Protocollo Titanium</p>
-
-                    <!-- REGOLA 5 - AIUTO BASE INFORMATIVA -->
-                    <p data-ui="hint" class="mb-10 text-center" data-t="reset_hint">
-                        Inserisci l'indirizzo email associato al tuo account. Ti invieremo un collegamento sicuro per
-                        impostare una nuova chiave d'accesso.
-                    </p>
-
-                    <form id="reset-form" class="space-y-8">
-                        <!-- Email Input -->
-                        <div class="space-y-2">
-                            <label
-                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none"
-                                data-t="email_address_label">Indirizzo
-                                Email</label>
-                            <input id="email" type="email" placeholder="nome@esempio.com" required
-                                class="w-full h-14 px-5 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base"
-                                data-t="email_placeholder">
-                        </div>
-
-                        <!-- Action Button -->
-                        <button type="submit"
-                            class="w-full h-14 bg-gradient-to-r from-blue-600 to-blue-500 hover:from-blue-500 hover:to-blue-400 text-white font-extrabold rounded-2xl shadow-xl transition-all active:scale-[0.98] border-glow group/btn overflow-hidden">
-                            <div class="relative z-10 flex items-center justify-center gap-2">
-                                <span class="tracking-widest uppercase text-xs" data-t="send_instructions_btn">Invia
-                                    email istruzioni</span>
-                                <span class="material-symbols-outlined text-sm">send</span>
-                            </div>
-                        </button>
-                    </form>
-
-                    <!-- Footer Link -->
-                    <div class="mt-8 text-center border-t border-white/5 pt-6">
-                        <p class="text-[10px] text-white/40 font-bold uppercase tracking-widest select-none">
-                            <span data-t="remembered_password_text">Hai ricordato la password?</span>
-                            <a href="index.html"
-                                class="text-blue-400 hover:text-white transition-colors ml-1 font-extrabold"
-                                data-t="back_to_login_link">Torna
-                                all'accesso</a>
-                        </p>
-                    </div>
-                </div>
+            <!-- Icona -->
+            <div class="security-icon-box">
+                <span class="material-symbols-outlined">lock_reset</span>
             </div>
-        </main>
 
-        <!-- FOOTER PLACEHOLDER -->
-        <div id="footer-placeholder"></div>
+            <!-- Titoli -->
+            <h1 class="auth-title" data-t="reset_page_title">Recupera Password</h1>
+            <p class="auth-subtitle" data-t="reset_hint">Riceverai un link di ripristino</p>
+
+            <!-- Form -->
+            <form id="reset-form">
+
+                <!-- Email -->
+                <div class="auth-form-group">
+                    <label class="auth-label" data-t="email_address_label">Email dell'account</label>
+                    <input id="email" name="email" type="email" autocomplete="email" required class="auth-input"
+                        data-t="placeholder_email" placeholder="mario.rossi@email.com">
+                </div>
+
+                <!-- Submit -->
+                <button type="submit" class="auth-btn" data-t="send_instructions_btn">
+                    <span class="material-symbols-outlined" style="font-size: 20px;">send</span>
+                    Invia email
+                </button>
+
+            </form>
+
+            <!-- Back Link -->
+            <div style="text-align: center; margin-top: 2rem;">
+                <a href="index.html" class="link-register" style="color:white; opacity:0.7; font-size:0.75rem;"
+                    data-t="back_to_login_link">
+                    <span class="material-symbols-outlined"
+                        style="font-size: 14px; vertical-align: middle; margin-right: 4px;">arrow_back</span>
+                    Torna al Login
+                </a>
+            </div>
+
+            <!-- Footer Legale -->
+            <div class="legal-footer">
+                © 2026 BM Service S.R.L. - <span data-t="version">Titanium V6.0</span>
+            </div>
+
+        </div>
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/main.js"></script>
     <script type="module" src="assets/js/reset_password.js"></script>
+
 </body>
 
 </html>
