--- a/Frontend/public/registrati.html
+++ b/Frontend/public/registrati.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html class="titanium-forced-dark dark" lang="it">
+<html lang="it" class="titanium-forced-dark">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="color-scheme" content="dark only">
-    <meta name="theme-color" content="#0a0f1e">
-    <title>Crea Account - Protocollo Titanium</title>
+    <title>Codici & Password - Registrazione</title>
 
-    <!-- Fonts & Icons -->
+    <link rel="manifest" href="manifest.json?v=5.7" />
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
+
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&amp;display=swap"
@@ -17,191 +18,96 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
         rel="stylesheet" />
 
-    <!-- Design System -->
-    <link rel="stylesheet" href="assets/css/titanium.css">
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <!-- TITANIUM AUTH SYSTEM V6.0 (Pure CSS) -->
+    <link rel="stylesheet" href="assets/css/auth_accesso.css?v=6.0">
 </head>
 
-<body class="titanium-bg antialiased">
+<body>
+
     <div class="titanium-box">
 
-        <!-- EF-[#3] FARO ANIMATO -->
+        <!-- Scenografia -->
         <div class="glass-glow"></div>
+        <div class="auth-header"></div>
+        <div class="auth-footer"></div>
 
-        <!-- HEADER PLACEHOLDER -->
-        <div id="header-placeholder"></div>
+        <!-- Card Registrazione -->
+        <div class="titanium-vault border-glow">
 
-        <main class="titanium-main !items-center !justify-center">
+            <!-- Icona -->
+            <div class="security-icon-box">
+                <span class="material-symbols-outlined">person_add</span>
+            </div>
 
-            <!-- Registration Card -->
-            <div class="titanium-vault border-glow group">
+            <!-- Titoli -->
+            <h1 class="auth-title" data-t="register_page_title">Registrati</h1>
+            <p class="auth-subtitle" data-t="login_subtitle">Crea il tuo account sicuro</p>
 
-                <!-- Hover Shimmer Overlay -->
-                <div
-                    class="absolute inset-0 bg-gradient-to-br from-white/10 to-transparent opacity-0 group-hover:opacity-100 transition-opacity rounded-[24px] pointer-events-none z-10">
-                </div>
+            <!-- Form -->
+            <form id="register-form">
 
-                <div class="px-8 pt-10 pb-10 relative z-10">
-                    <!-- Icon Section (Blue for Consistency) -->
-                    <div class="flex justify-center mb-8">
-                        <div
-                            class="h-20 w-20 rounded-2xl bg-gradient-to-tr from-blue-600 to-blue-400 flex items-center justify-center shadow-2xl shadow-blue-500/20 ring-1 ring-white/20 relative border-glow group-hover:scale-110 transition-transform duration-500">
-                            <span
-                                class="material-symbols-outlined text-white text-[36px] drop-shadow-lg">security</span>
-                        </div>
+                <!-- Nome & Cognome -->
+                <div style="display: flex; gap: 1rem;">
+                    <div class="auth-form-group" style="flex: 1;">
+                        <label class="auth-label" data-t="label_name">Nome</label>
+                        <input id="nome" name="nome" type="text" required class="auth-input" placeholder="Mario">
                     </div>
-
-                    <h1 class="text-3xl font-extrabold text-white text-center mb-1 select-none font-display"
-                        data-t="register_page_title">Registrati
-                    </h1>
-                    <p class="text-xs text-white/40 text-center mb-6 uppercase tracking-widest select-none font-bold"
-                        data-t="login_subtitle">
-                        Protocollo Titanium</p>
-
-                    <!-- REGOLA 5 - AIUTO BASE INFORMATIVA -->
-                    <div class="mb-8 p-4 bg-white/5 rounded-2xl border border-white/5 no-select">
-                        <div class="flex items-center gap-2 mb-2">
-                            <span class="material-symbols-outlined text-blue-400 text-sm">info</span>
-                            <h4 class="text-[10px] font-bold text-blue-400 uppercase tracking-widest"
-                                data-t="password_req_title">Requisiti Password
-                            </h4>
-                        </div>
-                        <ul class="text-[11px] text-white/40 space-y-1 list-none italic leading-relaxed">
-                            <li class="flex items-center gap-2"><span
-                                    class="w-1 h-1 bg-blue-500 rounded-full"></span><span data-t="req_min_chars">Minimo
-                                    12 caratteri totali</span></li>
-                            <li class="flex items-center gap-2"><span
-                                    class="w-1 h-1 bg-blue-500 rounded-full"></span><span data-t="req_upper">Almeno 3
-                                    Lettere Maiuscole</span></li>
-                            <li class="flex items-center gap-2"><span
-                                    class="w-1 h-1 bg-blue-500 rounded-full"></span><span data-t="req_symbols">Almeno 3
-                                    Simboli Speciali (!, @, #,
-                                    ...)</span></li>
-                        </ul>
-                    </div>
-
-                    <form id="register-form" class="space-y-6">
-
-                        <!-- Username -->
-                        <div class="space-y-2">
-                            <label
-                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none"
-                                data-t="username_label">Nome
-                                Utente</label>
-                            <input id="nome" type="text" placeholder="Scegli un username" required
-                                class="w-full h-14 px-5 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base"
-                                data-t="username_placeholder_reg">
-                            <input id="cognome" type="hidden" value="">
-                        </div>
-
-                        <!-- Email -->
-                        <div class="space-y-2">
-                            <label
-                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none"
-                                data-t="email_label">Email
-                                per iscrizione</label>
-                            <input id="email" type="email" placeholder="nome@esempio.com" required
-                                class="w-full h-14 px-5 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base"
-                                data-t="email_placeholder">
-                        </div>
-
-                        <!-- Password -->
-                        <div class="space-y-2">
-                            <label
-                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none"
-                                data-t="password_label_reg">Chiave
-                                d'Accesso</label>
-                            <div class="relative group/input">
-                                <input id="password" type="text" placeholder="Min. 8 caratteri" required
-                                    class="titanium-shield w-full h-14 px-5 pr-14 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base"
-                                    data-t="password_placeholder_reg">
-                                <button type="button"
-                                    class="toggle-password absolute right-4 top-1/2 -translate-y-1/2 text-white/20 hover:text-white transition-colors">
-                                    <span class="material-symbols-outlined text-[20px] select-none">visibility</span>
-                                </button>
-                            </div>
-                        </div>
-
-                        <!-- Hybrid Strength Indicator -->
-                        <div class="space-y-2 pt-1">
-                            <div class="flex gap-1.5 h-1.5">
-                                <div id="strength-bar-1"
-                                    class="h-full flex-1 rounded-full bg-white/10 transition-all duration-500"></div>
-                                <div id="strength-bar-2"
-                                    class="h-full flex-1 rounded-full bg-white/10 transition-all duration-500"></div>
-                                <div id="strength-bar-3"
-                                    class="h-full flex-1 rounded-full bg-white/10 transition-all duration-500"></div>
-                                <div id="strength-bar-4"
-                                    class="h-full flex-1 rounded-full bg-white/10 transition-all duration-500"></div>
-                            </div>
-                            <p id="strength-text"
-                                class="text-[9px] font-bold text-white/30 uppercase tracking-widest text-right select-none italic"
-                                data-t="security_level_zero">
-                                Protezione Livello Zero</p>
-                        </div>
-
-                        <!-- Action Button -->
-                        <button type="submit"
-                            class="w-full h-14 bg-gradient-to-r from-blue-600 to-blue-500 hover:from-blue-500 hover:to-blue-400 text-white font-extrabold rounded-2xl shadow-xl transition-all active:scale-[0.98] border-glow group/btn overflow-hidden">
-                            <div class="relative z-10 flex items-center justify-center gap-2">
-                                <span class="tracking-widest uppercase text-xs" data-t="create_account_btn">Crea
-                                    Account</span>
-                                <span class="material-symbols-outlined text-sm">arrow_forward</span>
-                            </div>
-                        </button>
-                    </form>
-
-                    <!-- Footer Links -->
-                    <div class="mt-8 text-center border-t border-white/5 pt-6">
-                        <p class="text-[10px] text-white/40 font-bold uppercase tracking-widest select-none">
-                            <span data-t="have_account_text">Hai già un'utenza?</span>
-                            <a href="index.html"
-                                class="text-blue-400 hover:text-white transition-colors ml-1 font-extrabold"
-                                data-t="login_now_link">Accedi
-                                ora</a>
-                        </p>
+                    <div class="auth-form-group" style="flex: 1;">
+                        <label class="auth-label" data-t="label_surname">Cognome</label>
+                        <input id="cognome" name="cognome" type="text" required class="auth-input" placeholder="Rossi">
                     </div>
                 </div>
-            </div>
-        </main>
 
-        <!-- FOOTER PLACEHOLDER -->
-        <div id="footer-placeholder"></div>
-    </div>
+                <!-- Email -->
+                <div class="auth-form-group">
+                    <label class="auth-label" data-t="email_label">Email</label>
+                    <input id="email" name="email" type="email" autocomplete="username" required class="auth-input"
+                        data-t="email_placeholder" placeholder="mario.rossi@email.com">
+                </div>
 
-    <!-- Verification Modal (Ultra Glass) -->
-    <div id="verification-modal" class="hidden fixed inset-0 z-[100] flex items-center justify-center p-4">
-        <div class="absolute inset-0 bg-black/90 backdrop-blur-md"></div>
-        <div
-            class="relative bg-[#0f172a] rounded-[32px] border-glow p-8 w-full max-w-sm text-center shadow-2xl relative overflow-hidden">
-            <div class="saetta opacity-20"></div>
-            <div
-                class="w-16 h-16 bg-blue-500/20 rounded-2xl flex items-center justify-center mx-auto mb-6 text-blue-400 border border-blue-500/30">
-                <span class="material-symbols-outlined text-[32px]">forward_to_inbox</span>
-            </div>
-            <h2 class="text-2xl font-black text-white mb-2 font-display" data-t="verify_email_title">Verifica Email</h2>
-            <p class="text-xs text-white/50 leading-relaxed mb-8 px-2 select-none" data-t="verify_email_text">
-                Abbiamo inviato un collegamento di sicurezza alla tua casella postale. Conferma l'identità per
-                procedere.
-            </p>
-            <div class="space-y-3">
-                <button id="resend-btn"
-                    class="w-full h-12 bg-white/5 hover:bg-white/10 text-white text-xs font-bold rounded-xl border border-white/10 transition-all uppercase tracking-widest"
-                    data-t="resend_email_btn">
-                    Reinvia Email
+                <!-- Password -->
+                <div class="auth-form-group">
+                    <label class="auth-label" data-t="password_label_reg">Password</label>
+                    <input id="password" name="password" type="password" autocomplete="new-password" required
+                        class="auth-input" data-t="password_placeholder_reg" placeholder="********">
+                </div>
+
+                <!-- Conferma Password -->
+                <div class="auth-form-group">
+                    <label class="auth-label" data-t="confirm_new_password">Conferma Password</label>
+                    <input id="confirm-password" name="confirm-password" type="password" autocomplete="new-password"
+                        required class="auth-input" placeholder="********">
+                </div>
+
+                <!-- Submit -->
+                <button type="submit" class="auth-btn" data-t="create_account_btn">
+                    <span class="material-symbols-outlined" style="font-size: 20px;">check_circle</span>
+                    Nuova registrazione
                 </button>
-                <button id="close-modal"
-                    class="w-full h-12 text-white/30 hover:text-white text-xs font-bold transition-colors uppercase tracking-widest"
-                    data-t="back_to_login_btn">
-                    Torna al Login
-                </button>
+
+            </form>
+
+            <!-- Login Link -->
+            <div style="text-align: center; margin-top: 1.5rem;">
+                <span style="font-size: 0.8rem; color: rgba(255,255,255,0.5);" data-t="have_account_text">Hai già un
+                    account?</span>
+                <a href="index.html" class="link-register"
+                    style="display:inline-block; margin-top: 5px; margin-left: 5px;" data-t="login_now_link">
+                    Accedi
+                </a>
             </div>
+
+            <!-- Footer Legale -->
+            <div class="legal-footer">
+                © 2026 BM Service S.R.L. - <span data-t="version">Titanium V6.0</span>
+            </div>
+
         </div>
     </div>
 
-    <!-- Modules -->
-    <script type="module" src="assets/js/main.js"></script>
+    <!-- Scripts -->
     <script type="module" src="assets/js/registrati.js"></script>
+
 </body>
 
 </html>
